修改了样式

--- a/src/main/webapp/WEB-INF/view/head.html
+++ b/src/main/webapp/WEB-INF/view/head.html
@@ -13,14 +13,14 @@
 <body>
 <nav class="navbar navbar-default navbar-static-top ">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <span class="navbar-brand">
-                FireTech
-            </span>
-        </div>
-        <a class="btn btn-danger btn-sm navbar-btn" href="/logout" style="float: right">
+        <span class="navbar-brand">
+            <strong><i>FireTech</i></strong>
+        </span>
+        <span style="float: right">
+            <a class="btn btn-danger btn-sm navbar-btn" href="/logout">
             <span class="glyphicon glyphicon-off" aria-hidden="true"></span>退出
         </a>
+        </span>
     </div>
 
 </nav>
